# wallpaper_tagging

./: .gitignore  README.md  data.py  eda.ipynb  pyproject.toml  requirements.txt  test.py  testing.ipynb
doc/: composite.drawio  lp.drawio  lqp.drawio  mlp.drawio  practice.aux  practice.out  practice.run.xml  practice.tex  practice.toc  refs.bib  srcs.txt  task.drawio  template.aux  template.bbl  template.blg  template.out  template.tex  template.toc  thesis.aux  thesis.bbl  thesis.out  thesis.run.xml  thesis.tex  thesis.toc  udstu.cls  vcnn.drawio
models/: compose.py  lp.py  lqp.py  mlp.py  mscnn.py  utils.py  vcnn.py
scripts/: 1ktags.py  coco2ndjosn.py  coco2ndjson.py  coco2tar.sh  compose2safe.py  img2tar.sh  nus-wide2tar.sh  nuswide2ndjson.py  proc2tar.sh  test.py  tokenize_ndjson.py  train.py  train_lp.py  train_mlp.py  train_mscnn.py
scripts/test/: compose.py  vcnn.py
scripts/train/: lp.py  lqp.py  mlp.py  vcnn.py
src/: data.py  tagattention.py  utils.py
