[tool.poetry]
name = "wallpaper-tagging"
version = "0.1.0"
description = ""
authors = ["skorodenko <72010957+skorodenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
torchvision = "^0.17.0"
lightning = "^2.2.0.post0"
torchtext = "^0.17.0"
numpy = "^1.26.4"
polars = "^0.20.10"
pandas = "^2.2.1"
tqdm = "^4.66.2"
pillow = "^10.2.0"
torcheval = "^0.0.7"
lightning-flash = "^0.8.2"
deepspeed = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
